fix: implement event-driven sensor monitoring with makeCapabilityInstance
Replace non-functional WebSocket event pattern with proper HomeyAPI
capability monitoring using makeCapabilityInstance(). This fixes door
opening events not being detected in real-time.

Changes:
- Replace device.on('$update', handler) with device.makeCapabilityInstance()
- Update SensorMonitor to use capability instances instead of event listeners
- Add proper cleanup of capability instances in stop() method
- Update all logging to use [CAPABILITY] prefix for clarity

The makeCapabilityInstance() method is the correct HomeyAPI pattern for
monitoring device capabilities in Homey SDK v3, providing real-time
callbacks when capability values change.

Tested with door sensor - events now detected immediately with proper
rising/falling edge detection and callback triggering.

--- a/.homeycompose/drivers/wiab-device/driver.settings.compose.json
+++ b/.homeycompose/drivers/wiab-device/driver.settings.compose.json
@@ -1,58 +1,26 @@
 [
   {
-    "type": "group",
+    "id": "triggerSensors",
+    "type": "textarea",
     "label": {
-      "en": "Sensor Configuration",
-      "nl": "Sensor Configuratie"
+      "en": "Trigger Sensors",
+      "nl": "Trigger Sensoren"
     },
-    "children": [
-      {
-        "id": "triggerSensors",
-        "type": "textarea",
-        "label": {
-          "en": "Trigger Sensors",
-          "nl": "Trigger Sensoren"
-        },
-        "hint": {
-          "en": "JSON array of sensor device IDs that will trigger occupancy. Example: [\"device-id-1\", \"device-id-2\"]",
-          "nl": "JSON array van sensor apparaat IDs die aanwezigheid activeren. Voorbeeld: [\"device-id-1\", \"device-id-2\"]"
-        },
-        "value": "[]"
-      },
-      {
-        "id": "resetSensors",
-        "type": "textarea",
-        "label": {
-          "en": "Reset Sensors",
-          "nl": "Reset Sensoren"
-        },
-        "hint": {
-          "en": "JSON array of sensor device IDs that will reset occupancy. Example: [\"device-id-3\", \"device-id-4\"]",
-          "nl": "JSON array van sensor apparaat IDs die aanwezigheid resetten. Voorbeeld: [\"device-id-3\", \"device-id-4\"]"
-        },
-        "value": "[]"
-      }
-    ]
+    "hint": {
+      "en": "Motion sensors that activate occupancy (JSON array, configured during pairing)",
+      "nl": "Bewegingssensoren die aanwezigheid activeren (JSON array, geconfigureerd tijdens koppeling)"
+    }
   },
   {
-    "type": "group",
+    "id": "resetSensors",
+    "type": "textarea",
     "label": {
-      "en": "Information",
-      "nl": "Informatie"
+      "en": "Reset Sensors",
+      "nl": "Reset Sensoren"
     },
-    "children": [
-      {
-        "id": "info",
-        "type": "label",
-        "label": {
-          "en": "Configuration Help",
-          "nl": "Configuratie Hulp"
-        },
-        "hint": {
-          "en": "Enter sensor device IDs as a valid JSON array. You can find device IDs in the Homey developer tools or by inspecting the device settings. Make sure to use double quotes around each ID.",
-          "nl": "Voer sensor apparaat IDs in als een geldige JSON array. Je kunt apparaat IDs vinden in de Homey ontwikkeltools of door de apparaatinstellingen te inspecteren. Zorg ervoor dat je dubbele aanhalingstekens gebruikt rond elke ID."
-        }
-      }
-    ]
+    "hint": {
+      "en": "Contact sensors that deactivate occupancy (JSON array, configured during pairing)",
+      "nl": "Contactsensoren die aanwezigheid deactiveren (JSON array, geconfigureerd tijdens koppeling)"
+    }
   }
 ]
