--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "license": "MIT",
   "dependencies": {
-    "homey": "^3.0.0"
+    "homey": "^3.0.0",
+    "homey-api": "^3.14.22"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "@types/homey": "npm:homey-apps-sdk-v3-types@^0.3.12",
     "@types/jest": "^29.5.0",
     "@types/node": "^20.0.0",
@@ -27,6 +29,7 @@
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.0.0",
     "jest": "^29.5.0",
+    "playwright": "^1.57.0",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.0"
   },
