--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,9 @@ jobs:
           echo "Verifying coverage meets 70% threshold..."
           # Jest will fail if coverage is below threshold defined in jest.config.js
 
+      - name: Generate Homey app.json
+        run: npx homey app build
+
       - name: Validate Homey app
         run: npm run validate
 
