--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,9 @@ jobs:
           # Jest will fail if coverage is below threshold defined in jest.config.js
 
       - name: Generate Homey app.json
-        run: npx homey app build
+        run: |
+          cp .homeycompose/app.json app.json
+          npx homey app build
 
       - name: Validate Homey app
         run: npm run validate
