--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "lint": "eslint . --ext .ts",
-    "validate": "homey app validate"
+    "validate": "homey app validate --level=debug"
   },
   "author": {
     "name": "Andy van Dongen",
