feat: context-aware falling-edge T_ENTER for single and multi-PIR scenarios (#4)
* fix: resolve 10 eslint errors to unblock CI

- Remove unused import ClassifiedSensor from device.ts
- Prefix unused parameters with underscore in device.ts and tests/setup.ts
- Replace banned Function type with explicit signatures in tests/setup.ts
- Convert require() to import statement in tests/unit/device.test.ts
- Remove unused DeviceInfo import from tests/unit/DeviceRegistry.test.ts
- Remove unused createMockDevice import from tests/unit/device.test.ts

These pre-existing lint errors were blocking all PRs. Resolving them
allows the issue templates PR and future PRs to pass CI checks.

* fix: enforce strict TypeScript linting by eliminating all 'any' types

This commit resolves all 51 ESLint warnings (now errors) related to explicit 'any' type usage and updates ESLint configuration to treat no-explicit-any as an error instead of a warning.

**Configuration Changes:**
- .eslintrc.json: Changed @typescript-eslint/no-explicit-any from "warn" to "error"

**Type Safety Improvements:**

app.ts:
- Replace `device as any` with proper type assertion using optional getZone method

drivers/wiab-device/device.ts:
- Add WIABApp interface for HomeyAPI typing
- Replace `app as any` casts with `app as WIABApp`

drivers/wiab-device/driver.ts:
- Add WIABApp interface definition
- Replace `app as any` with `app as WIABApp`
- Replace `device as any` with proper HomeyAPIDevice intersection type
- Type session handler parameters as PairingDeviceConfig[] instead of any[]

lib/DeviceRegistry.ts:
- Import Homey and use proper Homey type for constructor and property
- Replace `driver as any` with proper Homey.Driver intersection type
- Type array callback parameters as Homey.Device instead of any

lib/SensorMonitor.ts:
- Import Homey and HomeyAPI types
- Replace `homeyApi: any` with HomeyAPI type
- Replace `logger: any` with Homey type
- Type device cache and refs as HomeyAPIDevice
- Type capability instan

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,11 @@ jobs:
           echo "Verifying coverage meets 70% threshold..."
           # Jest will fail if coverage is below threshold defined in jest.config.js
 
+      - name: Generate Homey app.json
+        run: |
+          cp .homeycompose/app.json app.json
+          npx homey app build
+
       - name: Validate Homey app
         run: npm run validate
 
