--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,9 +43,7 @@ jobs:
           # Jest will fail if coverage is below threshold defined in jest.config.js
 
       - name: Generate Homey app.json
-        run: |
-          cp .homeycompose/app.json app.json
-          npx homey app build
+        run: npm run homey:build
 
       - name: Validate Homey app
         run: npm run validate
