--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "lint": "eslint . --ext .ts",
+    "homey:build": "npx homey app build",
+    "homey:install": "npm run build && npx homey app install",
     "validate": "homey app validate --level=debug"
   },
   "author": {
