--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "lint": "eslint . --ext .ts",
-    "homey:build": "npx homey app build",
+    "homey:build": "cp .homeycompose/app.json app.json && npx homey app build",
     "homey:install": "npm run build && npx homey app install",
     "validate": "homey app validate --level=debug"
   },
