--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -4,8 +4,7 @@
   "compatibility": ">=12.2.0",
   "sdk": 3,
   "platforms": [
-    "local",
-    "cloud"
+    "local"
   ],
   "name": {
     "en": "Wasp in a Box",
