fix: remove Homey Cloud platform support (v1.0.1) (#12)
* fix: remove Homey Cloud platform support to resolve account eligibility

- Removed 'cloud' from platforms array in app and driver compose files
- App now only supports Homey Pro (local platform)
- Resolves 'Processing failed' submission error due to unverified cloud publishing rights
- App validates successfully at publish level with local-only support

* chore: bump version to 1.0.1 for resubmission

* chore: add .playwright-mcp to gitignore

---------

Co-authored-by: Andy van Dongen <andy.van.dongen@kabisa.nl>

--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -1,11 +1,10 @@
 {
   "id": "net.dongen.wiab",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "compatibility": ">=12.2.0",
   "sdk": 3,
   "platforms": [
-    "local",
-    "cloud"
+    "local"
   ],
   "name": {
     "en": "Wasp in a Box",
