chore: release v1.0.2 - add GitHub support URLs (#14)
* fix: add driver images to compose for store submission

* docs: add submission status notes documenting Homey CLI v3.10.0 bug

* docs: update submission notes with GitHub issue #414 details

* fix: consolidate driver compose files to correct location

Move driver configuration from .homeycompose/drivers/ to drivers/ directory
as per Homey Compose specification. Homey build system ignores compose files
in .homeycompose/drivers/ and only reads from drivers/ directory.

Changes:
- Merged images property into drivers/wiab-device/driver.compose.json
- Merged occupancy_state capability into driver.compose.json
- Removed duplicate compose files from .homeycompose/drivers/wiab-device/
- Removed redundant icon property (icons are auto-detected from assets/)

This fixes the issue where driver images were not appearing in app.json,
which would cause Homey App Store submission rejection.

Resolves issue reported in athombv/homey-apps-sdk-issues#414

* chore: merge v1.0.0 release back to develop

Merges v1.0.0 release from main back to develop to complete Gitflow cycle.

* fix: remove Homey Cloud platform support to resolve account eligibility

- Removed 'cloud' from platforms array in app and driver compose files
- App now only supports Homey Pro (local platform)
- Resolves 'Processing failed' submission error due to unverified cloud publishing rights
- App validates successfully at publish level with local-only support

* chore: bump version to 1.0.1 for resubmission

* chore: add .playwright-mcp to gitignore

* fix: correct gitignore patterns for build artifacts

* feat: add GitHub support URLs for issue tracking (#13)

Co-authored-by: Andy van Dongen <andy.van.dongen@kabisa.nl>

* chore: bump version to 1.0.2

---------

Co-authored-by: Andy van Dongen <andy.van.dongen@kabisa.nl>

--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -1,6 +1,6 @@
 {
   "id": "net.dongen.wiab",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "compatibility": ">=12.2.0",
   "sdk": 3,
   "platforms": [
@@ -33,6 +33,12 @@
       }
     ]
   },
+  "bugs": {
+    "url": "https://github.com/NdyGen/wiab/issues"
+  },
+  "support": "https://github.com/NdyGen/wiab/issues",
+  "source": "https://github.com/NdyGen/wiab",
+  "homepage": "https://github.com/NdyGen/wiab",
   "images": {
     "small": "/assets/images/small.png",
     "large": "/assets/images/large.png",
