feat: expand app categories for better discoverability
- Add tools, climate, energy, security, and lights categories
- Reflects multiple use cases: heating control, lighting automation, security, and general utility
- Improves discoverability across different sections of Homey App Store

--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -21,7 +21,11 @@
     "sv": "Smart rumsnärvaro som förblir aktiv även när du sitter stilla"
   },
   "category": [
-    "security"
+    "tools",
+    "climate",
+    "energy",
+    "security",
+    "lights"
   ],
   "permissions": [
     "homey:manager:api"
