--- a/.github/workflows/auto-merge-dependabot.yml
+++ b/.github/workflows/auto-merge-dependabot.yml
@@ -1,4 +1,4 @@
-name: Auto-merge Dependabot Patch Updates
+name: Auto-merge Dependabot Updates
 
 on:
   pull_request:
@@ -9,7 +9,7 @@ permissions:
   pull-requests: write
 
 jobs:
-  auto-merge-patch:
+  auto-merge:
     # Only run for Dependabot PRs
     if: github.actor == 'dependabot[bot]'
     runs-on: ubuntu-latest
@@ -21,38 +21,42 @@ jobs:
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
 
-      - name: Auto-approve patch updates
-        # Only auto-approve patch updates (0.0.x)
-        if: steps.metadata.outputs.update-type == 'version-update:semver-patch'
+      - name: Auto-approve patch and minor updates
+        # Auto-approve patch (0.0.x) and minor (0.x.0) updates
+        if: |
+          steps.metadata.outputs.update-type == 'version-update:semver-patch' ||
+          steps.metadata.outputs.update-type == 'version-update:semver-minor'
         run: |
           gh pr review --approve "$PR_URL"
-          echo "✅ Auto-approved patch update: ${{ steps.metadata.outputs.dependency-names }}"
+          echo "✅ Auto-approved ${{ steps.metadata.outputs.update-type }}: ${{ steps.metadata.outputs.dependency-names }}"
         env:
           PR_URL: ${{ github.event.pull_request.html_url }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Enable auto-merge for patch updates
+      - name: Enable auto-merge for patch and minor updates
         # Auto-merge will wait for CI to pass before merging
-        if: steps.metadata.outputs.update-type == 'version-update:semver-patch'
+        if: |
+          steps.metadata.outputs.update-type == 'version-update:semver-patch' ||
+          steps.metadata.outputs.update-type == 'version-update:semver-minor'
         run: |
           gh pr merge --auto --squash "$PR_URL"
-          echo "✅ Enabled auto-merge for patch update (will merge after CI passes)"
+          echo "✅ Enabled auto-merge for ${{ steps.metadata.outputs.update-type }} (will merge after CI passes)"
           echo "📦 Dependency: ${{ steps.metadata.outputs.dependency-names }}"
           echo "📈 Update: ${{ steps.metadata.outputs.previous-version }} → ${{ steps.metadata.outputs.new-version }}"
         env:
           PR_URL: ${{ github.event.pull_request.html_url }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Comment on non-patch updates
-        # Inform user about minor/major updates that need manual review
-        if: steps.metadata.outputs.update-type != 'version-update:semver-patch'
+      - name: Comment on major updates
+        # Inform user about major updates that need manual review
+        if: steps.metadata.outputs.update-type == 'version-update:semver-major'
         run: |
-          gh pr comment "$PR_URL" --body "⚠️ This is a **${{ steps.metadata.outputs.update-type }}** update and requires manual review.
+          gh pr comment "$PR_URL" --body "⚠️ This is a **major version update** and requires manual review.
 
           📦 Dependency: ${{ steps.metadata.outputs.dependency-names }}
           📈 Update: ${{ steps.metadata.outputs.previous-version }} → ${{ steps.metadata.outputs.new-version }}
 
-          Please review and merge manually after CI passes."
+          Major updates may contain breaking changes. Please review the changelog and test thoroughly before merging."
         env:
           PR_URL: ${{ github.event.pull_request.html_url }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
