fix: add flag to skip uncommitted changes validation in homey publish
The homey app publish command was failing in CI/CD because it detected
uncommitted changes (version file updates) and prompted for interactive
confirmation. This blocks automation with exit code 130.

Adding --skip-validate-uncommitted-changes bypasses the interactive prompt,
allowing the workflow to publish successfully. This is safe because the
uncommitted changes are intentional version updates that are committed
back to main after publishing.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,7 +76,7 @@ jobs:
           echo '{"token":"${{ secrets.HOMEY_BEARER_TOKEN }}"}' > ~/.athom-cli.json
 
       - name: Publish to Homey App Store
-        run: homey app publish
+        run: homey app publish --skip-validate-uncommitted-changes
         continue-on-error: true  # Don't fail if already published
         id: publish
 
