fix: remove app.json from git add (in .gitignore)
The previous commit tried to add app.json which is in .gitignore,
causing the workflow to fail with:

  The following paths are ignored by one of your .gitignore files:
  app.json

app.json is correctly ignored because it's a generated file from
.homeycompose/app.json via 'homey app build'.

Changes:
- Removed app.json from git add command (only commit source files)
- Removed non-existent --skip-validate-uncommitted-changes flag
- Now only commits: package.json, package-lock.json, .homeycompose/app.json

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,7 +71,7 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add package.json package-lock.json .homeycompose/app.json app.json
+          git add package.json package-lock.json .homeycompose/app.json
           git commit -m "chore: bump version to ${{ env.VERSION }}"
           git push origin HEAD:main
 
@@ -84,7 +84,7 @@ jobs:
           echo '{"token":"${{ secrets.HOMEY_BEARER_TOKEN }}"}' > ~/.athom-cli.json
 
       - name: Publish to Homey App Store
-        run: homey app publish --skip-validate-uncommitted-changes
+        run: homey app publish
         continue-on-error: true  # Don't fail if already published
         id: publish
 
