feat: automate changelog generation from git commits
Automatically generate changelog entries for .homeychangelog.json from
git commit messages instead of requiring manual updates.

How it works:
1. Finds previous tag using git describe
2. Extracts first commit message between tags
3. Dynamically updates .homeychangelog.json before publishing
4. Falls back to 'Bug fixes and improvements' if no commits found

Benefits:
- No manual changelog maintenance
- Changelog always reflects actual changes
- Works automatically for all future releases
- File changes stay uncommitted (no branch protection issues)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,6 +67,36 @@ jobs:
       - name: Validate Homey app
         run: npx homey app validate
 
+      - name: Generate and update changelog
+        run: |
+          # Get the previous tag
+          PREV_TAG=$(git describe --tags --abbrev=0 ${{ env.TAG }}^ 2>/dev/null || echo "")
+
+          if [ -z "$PREV_TAG" ]; then
+            CHANGELOG_TEXT="Initial release"
+          else
+            # Generate changelog from commits since previous tag
+            CHANGELOG_TEXT=$(git log $PREV_TAG..${{ env.TAG }} --pretty=format:"%s" --no-merges | head -1)
+
+            # If no commits found, use default message
+            if [ -z "$CHANGELOG_TEXT" ]; then
+              CHANGELOG_TEXT="Bug fixes and improvements"
+            fi
+          fi
+
+          echo "Generated changelog: $CHANGELOG_TEXT"
+
+          # Update .homeychangelog.json with new version entry
+          node -e "
+            const fs = require('fs');
+            const changelog = JSON.parse(fs.readFileSync('.homeychangelog.json', 'utf8'));
+            changelog['${{ env.VERSION }}'] = {
+              'en': '$CHANGELOG_TEXT'
+            };
+            fs.writeFileSync('.homeychangelog.json', JSON.stringify(changelog, null, 2) + '\n');
+            console.log('✅ Updated .homeychangelog.json with version ${{ env.VERSION }}');
+          "
+
       - name: Publish to Homey App Store
         uses: athombv/github-action-homey-app-publish@master
         id: publish
