fix: verify changelog entry exists before creating release tag
Fixes Homey publish failure caused by missing changelog entries in tagged commits.

Problem:
The workflow was checking out the merge commit in detached HEAD state,
which could result in tags being created without the updated changelog.
This caused Homey publish to fail with 'Missing changelog for vX.Y.Z'.

Solution:
- Checkout main branch instead of detached HEAD state
- Verify current SHA matches expected merge commit SHA
- Verify changelog entry exists in .homeychangelog.json before tagging
- Print changelog contents if verification fails for debugging

This ensures the tag always includes the merged changelog entry.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -530,9 +530,27 @@ jobs:
 
       - name: Create git tag
         run: |
-          # Fetch the merged commit
+          # Pull the latest main branch (which includes the merge commit)
           git fetch origin main
-          git checkout ${{ env.MERGE_SHA }}
+          git checkout main
+          git pull origin main
+
+          # Verify we have the correct merge commit
+          CURRENT_SHA=$(git rev-parse HEAD)
+          if [ "$CURRENT_SHA" != "${{ env.MERGE_SHA }}" ]; then
+            echo "::error::Current SHA $CURRENT_SHA doesn't match merge SHA ${{ env.MERGE_SHA }}"
+            exit 1
+          fi
+
+          # Verify changelog entry exists
+          if ! grep -q '"${{ env.VERSION }}"' .homeychangelog.json; then
+            echo "::error::Changelog entry for ${{ env.VERSION }} not found in .homeychangelog.json"
+            echo "Contents of .homeychangelog.json:"
+            cat .homeychangelog.json
+            exit 1
+          fi
+
+          echo "✅ Verified merge commit and changelog entry"
 
           # Create annotated tag
           git tag -a "${{ env.TAG }}" -m "Release ${{ env.TAG }}
