--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -445,22 +445,7 @@ jobs:
         run: |
           gh pr merge ${{ env.PR_NUMBER }} --auto --squash
           echo "✅ Enabled auto-merge for PR #${{ env.PR_NUMBER }}"
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Approve pull request
-        run: |
-          gh pr review ${{ env.PR_NUMBER }} --approve --body "✅ Automated approval: All quality checks passed in workflow Phase 2.
-
-          This release PR has been automatically approved because:
-          - Version validation passed
-          - Build successful
-          - All tests passed
-          - Linting passed
-          - Homey app validation passed
-
-          The PR will auto-merge once CI checks complete."
-          echo "✅ Approved PR #${{ env.PR_NUMBER }}"
+          echo "ℹ️ PR will auto-merge once CI checks pass (no approval required)"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
